[package]
name = "tower_middleware_timeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
pin-project = "1.0.12"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["retry"] }
